--- a/pages/cats/DaBai/DaBai.html
+++ b/pages/cats/DaBai/DaBai.html
@@ -23,11 +23,24 @@
             </div>
             <div class="card" style="width: 520rem;min-height: 95vh;">
                 <div class="card-body">
-                    <img class="float-left" src="DaBai.jpg"
-                         style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title" style="margin-top: 30px">大白</h4>
-                    <h5 class="card-subtitle">白猫</h5>
-                    <p class="card-text">霸道煤炭一堆</p>
+                    <div class="paper">
+                        <img class="float-left" src="DaBai.jpg"
+                             style="max-height: 200px; max-width: 200px">
+                        <h1 style="text-align: right;margin-top: 0;margin-bottom: 0;">猫猫档案</h1>
+                        <h4 class="card-title">大白</h4>
+                        <h5 class="card-subtitle">白猫</h5>
+                        <p class="card-text">霸道煤炭一堆</p>
+                        <p>
+                            <br>
+                            <br>
+                            <br>
+                            猫咪外号：中分哥<br>
+                            猫咪性别：弟弟<br>
+                            猫咪性格：慎摸，不好接近<br>
+                            猫咪特点：特别特别不爱干净的白猫一只，脸很圆。<br>
+                            猫咪简介：猫咪简介：西区小霸王，跟断掌打过架，现在好像正在跟美丽的玳瑁公主交往。
+                        </p>
+                    </div>
                     <img src="1.jpg">
                     <img src="2.jpg">
                 </div>
@@ -57,7 +70,7 @@
     var a_idx = 0;
     jQuery(document).ready(function ($) {
         $("body").click(function (e) {
-            var a = new Array("掌掌", "波波", "胖妹", "铁蛋", "怂怂", "香槟", "辛巴", "咪咪", "公主", "学霸", "大白", "摆摆");
+            var a = ["掌掌", "波波", "胖妹", "铁蛋", "怂怂", "香槟", "辛巴", "咪咪", "公主", "学霸", "大白", "摆摆"];
             var $i = $("<span/>").text(a[a_idx]);
             a_idx = (a_idx + 1) % a.length;
             var x = e.pageX,
