--- a/pages/cats/DuanZhang/DuanZhang.html
+++ b/pages/cats/DuanZhang/DuanZhang.html
@@ -26,7 +26,7 @@
                     <div class="paper">
                         <img class="float-left" src="DuanZhang.jpg"
                              style="max-height: 200px; max-width: 200px;">
-                        <h2 style="text-align: right;margin-top: 0;margin-bottom: 0;">猫猫档案</h2>
+                        <h1 style="text-align: right;margin-top: 0;margin-bottom: 0">猫猫档案</h1>
                         <h4 class="card-title">断掌</h4>
                         <h5 class="card-subtitle">橘白</h5>
                         <p class="card-text">可爱小肥猫一枚</p>
