--- a/pages/cats/FuTeBo/FuTeBo.html
+++ b/pages/cats/FuTeBo/FuTeBo.html
@@ -23,11 +23,25 @@
             </div>
             <div class="card" style="width: 520rem;min-height: 95vh;">
                 <div class="card-body">
-                    <img class="float-left" src="FuTeBo.jpg"
-                         style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title" style="margin-top: 30px">福特波</h4>
-                    <h5 class="card-subtitle">奶牛</h5>
-                    <p class="card-text">神经小猫一只</p>
+                    <div class="paper">
+                        <img class="float-left" src="FuTeBo.jpg"
+                             style="max-height: 200px; max-width: 200px;">
+                        <h1 style="text-align: right;margin-top: 0;margin-bottom: 0">猫猫档案</h1>
+                        <h4 class="card-title">福特波</h4>
+                        <h5 class="card-subtitle">奶牛</h5>
+                        <p class="card-text">神经小猫一只</p>
+                        <p>
+                            <br>
+                            <br>
+                            <br>
+                            猫咪外号：波波<br>
+                            猫咪性别：弟弟<br>
+                            猫咪性格：亲人，有时候还会主动求摸摸<br>
+                            猫咪特点：额头上的黑色毛发像蝴蝶，毛硬，不爱干净，有时候摸他可以把手摸黑。<br>
+                            猫咪简介：神经小猫，不怕狗还敢主动跟狗打架，喜欢睡车垫子，人跟他玩一般不会生气不会跑掉，喜欢玩棍子，还喜欢被打屁股。<br>
+                            猫咪趣事：有次波波自己跑到佛祖岭玩，被好心人挂网上问有没有丢猫，让人骑车穿了七条街才把他接回来。<br>
+                        </p>
+                    </div>
                     <img src="1.jpg">
                     <img src="2.jpg">
                 </div>
