--- a/pages/dogs/ZhaNan/ZhaNan.html
+++ b/pages/dogs/ZhaNan/ZhaNan.html
@@ -23,11 +23,24 @@
             </div>
             <div class="card" style="width: 520rem;min-height: 95vh;">
                 <div class="card-body">
+                    <div class="paper">
                     <img class="float-left" src="ZhaNan.jpg"
                          style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title" style="margin-top: 30px">渣男</h4>
+                        <h1 style="text-align: right;margin-top: 0;margin-bottom: 0">狗狗档案</h1>
+                    <h4 class="card-title">渣男</h4>
                     <h5 class="card-subtitle">中华田园犬</h5>
                     <p class="card-text">渣渣的老狗狗一只</p>
+                    <p>
+                        <br>
+                        <br>
+                        狗勾外号：平头哥<br>
+                        狗勾性别：弟弟<br>
+                        狗勾cp:tony（一只小黑狗）<br>
+                        狗勾性格：有点怕人，很难摸到。<br>
+                        狗勾特点：腿有点瘸瘸的，脑袋是平平的， 眼睛周围有着一圈黑色的眼线。<br>
+                        狗勾简介：是一只特别挑食的狗狗哦，经常跟他的老婆tony成双成对出没，喜欢在草地上躺着晒太阳，是湖经的大学长。
+                    </p>
+                    </div>
                     <img src="1.jpg">
                     <img src="2.jpg">
                 </div>
