--- a/pages/cats/MiMi/MiMi.html
+++ b/pages/cats/MiMi/MiMi.html
@@ -23,11 +23,23 @@
             </div>
             <div class="card" style="width: 520rem;min-height: 95vh;">
                 <div class="card-body">
-                    <img class="float-left" src="MiMi.jpg"
-                         style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title" style="margin-top: 30px">咪咪</h4>
-                    <h5 class="card-subtitle">玳瑁</h5>
-                    <p class="card-text">亲人小可爱一个</p>
+                    <div class="paper">
+                        <img class="float-left" src="MiMi.jpg"
+                             style="max-height: 200px; max-width: 200px;">
+                        <h1 style="text-align: right;margin-top: 0;margin-bottom: 0">猫猫档案</h1>
+                        <h4 class="card-title">咪咪</h4>
+                        <h5 class="card-subtitle">玳瑁</h5>
+                        <p class="card-text">亲人小可爱一个</p>
+                        <p>
+                            <br>
+                            <br>
+                            <br>
+                            猫咪性别：妹妹<br>
+                            猫咪性格：脾气很好，很好摸，但是摸久了不给吃的会不耐烦。<br>
+                            猫咪特点：爪子和脸很黑 ，眼睛上面有一块橘色的“小眉毛”，身材很匀称。<br>
+                            猫咪简介：在寒假还长胖的小猫一枚，脾气很好，可以和人亲近贴贴，白天喜欢出窝的到处玩，饿了知道在路口等人喂饭。
+                        </p>
+                    </div>
                     <img src="1.jpg">
                     <img src="2.jpg">
                 </div>
@@ -57,7 +69,7 @@
     var a_idx = 0;
     jQuery(document).ready(function ($) {
         $("body").click(function (e) {
-            var a = new Array("掌掌", "波波", "胖妹", "铁蛋", "怂怂", "香槟", "辛巴", "咪咪", "公主", "学霸", "大白", "摆摆");
+            var a = ["掌掌", "波波", "胖妹", "铁蛋", "怂怂", "香槟", "辛巴", "咪咪", "公主", "学霸", "大白", "摆摆"];
             var $i = $("<span/>").text(a[a_idx]);
             a_idx = (a_idx + 1) % a.length;
             var x = e.pageX,
