--- a/pages/cats/TieDan/TieDan.html
+++ b/pages/cats/TieDan/TieDan.html
@@ -23,11 +23,23 @@
             </div>
             <div class="card" style="width: 520rem;min-height: 95vh;">
                 <div class="card-body">
+                    <div class="paper">
                     <img class="float-left" src="TieDan.jpg"
                          style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title" style="margin-top: 30px">铁蛋</h4>
+                    <h1 style="text-align: right;margin-top: 0;margin-bottom: 0">猫猫档案</h1>
+                    <h4 class="card-title">铁蛋</h4>
                     <h5 class="card-subtitle">简州猫</h5>
                     <p class="card-text">贪吃超大肥猫一辆</p>
+                    <p>
+                        <br>
+                        <br>
+                        <br>
+                        猫咪性别：弟弟<br>
+                        猫咪性格：近期情绪不稳定，慎摸。<br>
+                        猫咪特点：胖是他最大的特点，脸圆眼睛绿。<br>
+                        猫咪简介：有一个独属他的专属红宝座，喜欢吃，经常守着盆等饭吃，追求过很多猫猫。
+                    </p>
+                    </div>
                     <img src="1.jpg">
                     <img src="2.jpg">
                 </div>
