--- a/pages/dogs/XueBa/XueBa.html
+++ b/pages/dogs/XueBa/XueBa.html
@@ -23,11 +23,22 @@
             </div>
             <div class="card" style="width: 520rem;min-height: 95vh;">
                 <div class="card-body">
-                    <img class="float-left" src="XueBa.jpg"
-                         style="max-height: 200px; max-width: 200px;">
-                    <h4 class="card-title" style="margin-top: 30px">学霸</h4>
-                    <h5 class="card-subtitle">中华田园犬</h5>
-                    <p class="card-text">可爱小肥狗狗一枚</p>
+                    <div class="paper">
+                        <img class="float-left" src="XueBa.jpg"
+                             style="max-height: 200px; max-width: 200px;">
+                        <h1 style="text-align: right;margin-top: 0;margin-bottom: 0">狗狗档案</h1>
+                        <h4 class="card-title">学霸</h4>
+                        <h5 class="card-subtitle">中华田园犬</h5>
+                        <p class="card-text">可爱小肥狗狗一枚</p>
+                        <p>
+                            <br>
+                            <br>
+                            狗勾性别：妹妹<br>
+                            狗勾性格：亲人，喜欢吃，喜欢玩小玩具，喜欢跟人一起玩。<br>
+                            狗狗特点：眼睛亮，耳朵大且容易翻，腿腿有点短。<br>
+                            狗勾简介：学霸是一只很聪明的小狗，可以明白很多简单的指令，很乖很听话。超级喜欢大学生，是一只“敏感”的狗狗，能感受到周围人对她的感觉，会很喜欢喜欢她的人，也会对着怕她讨厌她的人大叫。很通人性的小狗一只，跑起来屁股一颠一颠的，高兴时可以从脸上看见她可爱的笑容。
+                        </p>
+                    </div>
                     <img src="1.jpg">
                     <img src="2.jpg">
                 </div>
@@ -57,7 +68,7 @@
     var a_idx = 0;
     jQuery(document).ready(function ($) {
         $("body").click(function (e) {
-            var a = new Array("掌掌", "波波", "胖妹", "铁蛋", "怂怂", "香槟", "辛巴", "咪咪", "公主", "学霸", "大白", "摆摆");
+            var a = ["掌掌", "波波", "胖妹", "铁蛋", "怂怂", "香槟", "辛巴", "咪咪", "公主", "学霸", "大白", "摆摆"];
             var $i = $("<span/>").text(a[a_idx]);
             a_idx = (a_idx + 1) % a.length;
             var x = e.pageX,
