--- a/pages/about.html
+++ b/pages/about.html
@@ -38,6 +38,9 @@
         <p>张丽君（照片）</p>
         <p>张庭恺（代码测试）</p>
         <p>张锐（代码）</p>
+        <h2>联系方式</h2>
+        <h3>邮箱:forfun.william.c@email.hbue.edu.cn</h3>
+        <h3>QQ:3443282125</h3>
     </div>
     <div class="col-fill col"></div>
 </div>
